test/libsolidity/syntaxTests/parsing/tuples_without_commas.sol
contract C {
	function f() {
		uint a = (2 2);
	}
}
// ----
// ParserError 2314: (43-44): Expected ',' but got 'Number'
